--- a/chat/static/css/index.css
+++ b/chat/static/css/index.css
@@ -83,6 +83,29 @@ i:hover {
     cursor: pointer;
 }
 
+textarea::placeholder {
+    font-size: 12px !important;
+}
+
 textarea {
-    max-height: 100px;
+    scrollbar-width: thin;
+    scrollbar-color: #c0c0c0 #ebebeb;
+    overflow-y: scroll;
+    direction: rtl !important;
+    font-size: 12px !important;
+    max-height: 30px;
+}
+
+#chat div p {
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-size: 11px;
+}
+
+#chat div {
+    font-size: 13px;
+}
+
+.chat {
+    min-width: 50%;
 }
