--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -64,7 +64,15 @@
                     </div> -->
                 </div>
                 <!-- person's chat ended -->
-                <div class="form-group px-3"> <textarea placeholder="پیام خودتون رو وارد کنید ." id="input" class="form-control" rows="5" placeholder="Type your message"></textarea> </div>
+                <div class="form-group row px-3">
+                    <div class="col-11">
+                        <textarea placeholder="پیام خودتون رو وارد کنید ." id="input" class="form-control" rows="5" placeholder="Type your message">
+                        </textarea>
+                    </div>
+                    <div class="col-1">
+                        <i id="send" class="fas fa-paper-plane"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
